--- a/navi/package.json
+++ b/navi/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "scrape": "tsx src/scripts/scrape-ai-tools.ts"
   },
   "dependencies": {
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
+    "puppeteer": "^24.12.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -23,6 +25,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
